<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/settings_application" >
        <ListPreference
            android:title="@string/settings_language" 
            android:summary="@string/settings_language_summary" 
            android:dialogTitle="@string/settings_language"
            android:entries="@array/language_items"
            android:entryValues="@array/language_items_values"
            android:key="@string/settings_lang_key"
            android:defaultValue="@string/settings_lang_default" 
            android:negativeButtonText="CANCEL"
            android:positiveButtonText="DONE" 
            android:persistent="true" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/settings_hardware" >
            <com.srandroid.overflow.DialogSetMicrophoneVolume
	            android:title="@string/settings_microphone"
	            android:summary="@string/settings_microphone_summary" 
	            android:key="@string/settings_mic_volume_key" 
	            android:defaultValue="@string/settings_mic_volume_default" 
	            android:persistent="true" />
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/settings_recvalue" >
                
                <ListPreference
                    android:summary="@string/settings_sample_rate_summary"
                    android:title="@string/settings_sample_rate" 
                    android:dialogTitle="@string/settings_sample_rate"
                    android:entries="@array/sample_rate_items"
                    android:entryValues="@array/sample_rate_items_values"
                    android:key="@string/settings_sample_rate_key"
                    android:defaultValue="@string/settings_sample_rate_default" 
                    android:negativeButtonText="CANCEL"
                    android:positiveButtonText="DONE" 
                    android:persistent="true" />
                
                <ListPreference
                    android:summary="@string/settings_channels_summary"
                    android:title="@string/settings_channels" 
                    android:dialogTitle="@string/settings_channels"
                    android:entries="@array/channels_items"
                    android:entryValues="@array/channels_items_values"
                    android:key="@string/settings_channels_key"
                    android:defaultValue="@string/settings_channels_default" 
                    android:negativeButtonText="CANCEL"
                    android:positiveButtonText="DONE"
                    android:persistent="true" />
    
                <CheckBoxPreference
                    android:title="@string/settings_overwrite"
                    android:summary="@string/settings_overwrite_summary" 
                    android:key="@string/settings_overwrite_key"
                    android:defaultValue="true" 
                    android:persistent="true" />
                
                <CheckBoxPreference
                    android:title="@string/settings_overwrite_warning"
                    android:summary="@string/settings_overwrite_warning_summary" 
                    android:key="@string/settings_overwrite_warning_key"
                    android:defaultValue="true" 
                    android:persistent="true" />

        </PreferenceCategory>
        
    <PreferenceCategory 
        android:title="invisible preferences" >
        <Preference 
            android:key="byte_order" 
            android:defaultValue="Little Endian" 
            android:persistent="true" /> 
            <!-- Value:Little Endian, Big Endian, Unknown -->
        <Preference 
            android:key="encoding" 
            android:defaultValue="PCM_16BIT" 
            android:persistent="true" />
            <!-- Value:PCM_16BIT, PCM_8BIT -->
        <Preference 
            android:key="sample size" 
            android:defaultValue="2" 
            android:persistent="true" />
            <!-- Value:0, 1, 2, 3, 4 -->
        <Preference 
            android:key="recording_target" 
            android:defaultValue="direct" 
            android:persistent="true" />
            <!-- Value:direct, temp_raw_file -->
        <Preference 
            android:key="recording_mode" 
            android:defaultValue="manual" 
            android:persistent="true" />
            <!-- Value:manule, autoprogress, auto recording -->
        <Preference 
            android:key="autoprogress" 
            android:defaultValue="true" 
            android:persistent="true" />
            <!-- autoprogress to next unrecorded item
            Value: true,false -->
        <Preference 
            android:key="reset_peak" 
            android:defaultValue="true" 
            android:persistent="true" />
            <!-- reset peak at start of recording
            Value:true, false -->
        <Preference 
            android:key="prerecdelay" 
            android:defaultValue="1000" 
            android:persistent="true" />
            <!-- Value: milisecond -->
        <Preference 
            android:key="postrecdelay" 
            android:defaultValue="1000" 
            android:persistent="true" />
            <!-- Value: milisecond -->
        <Preference 
            android:key="records_path" 
            android:defaultValue="unknown" 
            android:persistent="true" />
            <!-- Value: the path to the folder records -->
    </PreferenceCategory>

</PreferenceScreen>