<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_linearlayout_activity_example" >

    <LinearLayout
    android:background="#FFFFFF"
    android:layout_width="400dp"
    android:layout_height="450dp"
    android:orientation="vertical" >
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal" >
            
            <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:gravity="center" >
		            <ImageView 
		                android:layout_width="180dp"
		                android:layout_height="180dp"
		                android:scaleType="fitXY"
		                android:id="@+id/sessiondetails_icon_session"
		                android:src="@drawable/icon_session_256"  />
		    </LinearLayout>
		    
            <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="left" >
		            
                    <TextView
                    android:id="@+id/act_sessiondetails_sessionid_textvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/act_sessiondetails_sessionid_text" 
                    android:textSize="20sp"/>
                    
                    <TextView
                    android:id="@+id/act_sessionsdetails_datetime_textvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/act_sessiondetails_datetime_text" 
                    android:textSize="20sp"/>
                    
                    <TextView
                    android:id="@+id/act_sessiondetails_place_textvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/act_sessiondetails_place_text" 
                    android:textSize="20sp"/>
                    
                    <TextView
                    android:id="@+id/act_sessiondetails_isfinished_textvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/act_sessiondetails_isfinished_text" 
                    android:textSize="20sp"/>
                    
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical" >
            
               <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="125dp"
		        android:orientation="horizontal" >
		               <TextView
	                    android:layout_width="150dp"
	                    android:layout_height="match_parent"
	                    android:gravity="center"
	                    android:text="@string/act_sessiondetails_speakers_text" 
	                    android:textSize="30sp"
	                    android:textStyle="bold" />
		               <TextView
                        android:id="@+id/act_sessiondetails_speakers_textvalue"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/act_sessiondetails_speakers_text2" 
                        android:textSize="20sp"/>
		        </LinearLayout>
		        
               <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal" >
		               
		               <TextView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/act_sessiondetails_scripts_text" 
                        android:textSize="30sp"
                        android:textStyle="bold" />
                       <TextView
                        android:id="@+id/act_sessiondetails_scripts_textvalue"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:text="@string/act_sessiondetails_scripts_text2" 
                        android:textSize="20sp"/>
                       
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

