<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_linearlayout_wrap_item" >
    
    <LinearLayout 
        style="@style/style_linearlayout_item" >
        
        <LinearLayout 
            style="@style/style_linearlayout_wrap_imageview_in_item" >
            <ImageView 
                style="@style/style_linearlayout_imageview_in_item"
                android:id="@+id/iconInItemSpeaker"
                android:src="@drawable/icon_speaker_256"  />
        </LinearLayout>  
        
	    <LinearLayout 
	        style="@style/style_linearlayout_wrap_textview_in_item" >
	        
	        <TextView 
	            style="@style/style_title_in_textview_in_item"
	            android:id="@+id/nameInItemSpeaker"
                android:text="@string/speaker2_name"/>
	        <TextView 
                style="@style/style_text_in_textview_in_item"
                android:id="@+id/sexInItemSpeaker"
                android:text="@string/speaker2_sex"/>
	        <TextView 
                style="@style/style_text_in_textview_in_item"
                android:id="@+id/accentInItemSpeaker"
                android:text="@string/speaker2_accent"/>
	        <TextView 
                style="@style/style_text_in_textview_in_item"
                android:id="@+id/birthdayInItemSpeaker"
                android:text="@string/speaker2_birthday"/>
	        
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>
